2008.10.03

* Added a fix for bug 277184 supplied by Jehiah.
* Added a similar fix for the web admin UI.
* Added proper default for crypt salt in utility.

2008.07.10 oubiwann

* Fixed refresh bug submitted by Steffen Oschatz.

2008.07.09 oubiwann

* Moved utility functions out of setup.py and into util module.
* Moved setuptools imports (with fallback) to util module.
* Added DEPENDENCIES.
* Fixed a bug in application.director that crept in during the last merge.
* Added a build-checking script and added it to the commit script.
* Incremented the version number for next development cycle.
* Added more messages to the check-build script.
* Re-added (somehow) missing cleanup call.
* Consolidated cleanup command.
* Updated the README with information on using the txLB API.
* Updated TODO with more thoughts on the same .tac file serving as both the
proxied, content-serving host as well as the managing service.
* Changed the manager module to a subpackage due to increasing code growth.
* Moved checkers into manager.check.
* Updated manager tests.
* Added TCP ping capability (taken from the pymon project's pymon.utils.scanner).
* Added a docstring to the private callback.

2008.07.06 oubiwann

* Fixed errors in README REST.

2008.07.05 oubiwann

* Updated setup.py with code from zc.twist's setup.py.
* Updated README.
* Updated setup.py with utility functions from Zope Corp.
* Updated README some more.
* Added a manifest template so that doc files get included in the sdists.
* Updated TODO.
* Updated the example lb API .tac file.
* Fixed some whitespace.
* Merged changes made in 1.1.0 release branch.
* Added support for more concise use of HostMapper by creating sensible
defaults for proxy and group names.
* Added a test for the concise form.
* Cleaned up the lb API by calling proxiesFactory in __init__.
* Updated TODO with notes that were in the scheduler module, but hadn't made it
into the TODO file.
* More TODO updates.

2008.07.04 oubiwann
