@@ -3,6 +3,7 @@
 * Added a fix for bug 277184 supplied by Jehiah.
 * Added a similar fix for the web admin UI.
 * Added proper default for crypt salt in utility.
+* Added a fix for the isReadOnly bug 277851 supplied by Jehiah.
 
 2008.07.10 oubiwann
 
